# client

./: .gitignore  AGENTS.md  BIT_RES.CPP  CDirectDraw.cpp  CDirectDraw.h  CDirectInput.cpp  CDirectInput.h  CDirectMusic.cpp  CDirectSetupGetVersion.cpp  CDirectSound.h  CLAUDE.md  CLEANUP_SUMMARY.md  CMP3.cpp  CMP3.h  CMakeCache.txt  CMakeLists.txt  COGGSTREAM.CPP  CSystemInfo.h  CppUnitTestApp.dsp  CppUnitTestMain.dsp  DEMO_ACTUAL_STATUS.md  DEMO_DATA_GUIDE.md  DEMO_README.md  DirectXLib.dsp  EMSCRIPTEN_STATUS.md  FINAL_SUMMARY.md  GDI_USAGE_ANALYSIS.md  MStatusManager.cpp  MStatusManager.h  MZLib.dsp  Makefile  PLATFORM_MIGRATION.md  README.md  SDL_MIGRATION_CLEANUP_SUMMARY.md  SkillDef.h  TEXT_MIGRATION.md  TEXT_MIGRATION_SUMMARY.md  WEB_BUILD_COMPLETE.md  WINDOWS_NATIVE_CLEANUP_SUMMARY.md  build_and_run_effect_viewer.sh  (+20 more)
Client/DEUtil/: CMakeLists.txt  DEUtil.cpp  DEUtil.dsp  DEUtil.dsw  DEUtil.ncb  DEUtil.opt  DEUtil.plg  DEUtil.vcxproj  DEUtil.vcxproj.filters  ReadMe.txt  StdAfx.h  mssccprj.scc  vssver.scc  vssver2.scc
Client/DXLib/: BIT_RES.CPP  CDirectDraw.cpp  CDirectDraw.h  CDirectDrawSurface.cpp  CDirectDrawSurface.h  CDirectDraw_StaticMembers.cpp  CDirectInput.cpp  CDirectInput.h  CDirectInput_Adapter.cpp  CDirectMusic.cpp  CDirectMusic.h  CDirectMusic_Adapter.cpp  CDirectSetup.h  CDirectSetupGetVersion.cpp  CDirectSound.cpp  CDirectSound.h  CDirectSoundStream.cpp  CDirectSoundStream.h  CDirectSoundStream_Adapter.cpp  CDirectSound_Adapter.cpp  CMakeLists.txt  DXLib.dsp  DXLib.dsw  DXLibBackend.h  DXLibBackendSDL.cpp  README.md  codec.h  common.h  header.cpp  header.h  huffman.cpp  huffman.h  mp3.cpp  mp3.h  ogg.h  ogg.lib  reader.cpp  reader.h  soundbuf.cpp  soundbuf.h  (+5 more)
Client/MZLib/: CMakeLists.txt  MZLib.cpp  MZLib.dsp  MZLib.dsw  MZLib.ncb  MZLib.opt  MZLib.plg  MZLib.vcxproj  MZLib.vcxproj.filters  MZlib.h  crc32.c  deflate.c  mssccprj.scc  trees.c  uncompr.c  vssver.scc  vssver2.scc  zconf.h  zutil.c
Client/SpriteLib/: .!21066!CSetManager.h  .!21068!CAlphaSprite565.h  .!21069!CSprite555.h  .!21071!TArray.h  .!21074!CIndexSprite555.h  .!21076!CSprite565.h  .!21077!CShadowSprite.h  .!21078!CShadowSprite.h  .!21079!CStorageSurface.h  .!21081!CSpriteOutlineManager.h  .!21083!CFileIndexTable.h  .!21085!CFilter.h  .!21088!CAlphaSprite555.h  .!21089!CIndexSprite565.h  .!21091!CAlphaSprite.h  .!21092!CAlphaSprite.h  .!21093!CIndexSprite.h  CAlphaSprite.cpp  CAlphaSprite.h  CAlphaSprite555.cpp  CAlphaSprite555.h  CAlphaSprite565.cpp  CAlphaSprite565.h  CAlphaSpritePack.cpp  CAlphaSpritePack.h  CAlphaSpritePackList.cpp  CAlphaSpritePackList.h  CAlphaSpritePackList555.cpp  CAlphaSpritePackList555.h  CAlphaSpritePackList565.cpp  CAlphaSpritePackList565.h  CAlphaSpritePal.cpp  CAlphaSpritePal.h  CFileIndexTable.cpp  CFileIndexTable.h  CFilter.cpp  CFilter.h  CFilterPack.cpp  CFilterPack.h  CIndexSprite.cpp  (+70 more)
Client/VolumeLib/: CMakeLists.txt  VolumeLib.dsp  VolumeLib.dsw  VolumeLib.ncb  VolumeLib.opt  VolumeLib.plg  VolumeLib.vcxproj  VolumeLib.vcxproj.filters  VolumeLibStub.cpp  VolumeOutMaster.cpp  VolumeOutMaster.h  VolumeOutWave.cpp  VolumeOutWave.h  mssccprj.scc  vssver.scc  vssver2.scc
Client/framelib/: CAnimationFrame.cpp  CAnimationFrame.h  CAnimationFrameSetManager.cpp  CAnimationFrameSetManager.h  CCreatureFrameSetManager.cpp  CCreatureFrameSetManager.h  CFrame.cpp  CFrame.h  CFramePack.cpp  CFramePack.h  CFrameSet.h  CFrameSetManager.cpp  CFrameSetManager.h  CMakeLists.txt  DrawTypeDef.h  FR.h  FrameLib.dsp  FrameLib.dsw  Frame_PCH.h  TArray.h  vssver.scc  vssver2.scc
basic/: 2d.h  AudioTypes.h  BasicData.cpp  BasicData.h  BasicException.cpp  BasicMemory.h  CMakeLists.txt  ColorDraw.cpp  ColorDraw.h  DLL.h  Directory.cpp  Directory.h  GL_import.cpp  GL_import.h  IMG.h  InputCodes.h  PS.h  Platform.h  PlatformSDL.cpp  PlatformUtil.h  PlatformWindows.cpp  README.md  TGA.h  Timer2.cpp  Typedef.h  i_signal.h  timer2.h  vssver.scc  vssver2.scc
basic/bak/: CAvi.cpp  CAvi.h  Ci.h  RarFile.h  Timer_import.h  mother.h  mother_import.h  rbt.h  vssver.scc  vssver2.scc
emscripten/: CMakeLists.txt  DEPENDENCY_ANALYSIS.md  DemoGlobals.cpp  DemoStubs.cpp  DemoVTables.cpp  build.sh  copy_essential_sprites.sh  demo_main.cpp  setup_demo_data.sh  test_desktop.sh
engine/sprite/: CMakeLists.txt
examples/: CMakeLists.txt  sprite_backend_example.cpp
mingw/: ACP_BCB.h  ACProtect.h  APICheck.cpp  APICheck.h  AddonDef.h  AppendPatchInfo.cpp  AppendPatchInfo.h  BloodBibleSignInfo.cpp  BloodBibleSignInfo.h  CAvi.cpp  CAvi.h  CDataTable.h  CDirectDrawSurface.cpp  CDirectInput.cpp  CDirectInput.h  CDirectMusic.cpp  CDirectSetupGetVersion.cpp  CDirectSound.cpp  CDirectSound.h  CDirectSoundStream.cpp  CGameUpdate.cpp  CGameUpdate.h  CJpeg.h  CMP3.cpp  CMP3.h  CMakeLists.txt  CMessageArray.cpp  CMessageArray.h  CNormalSpriteTexturePartManager.cpp  COpeningUpdate.cpp  COpeningUpdate.h  COrderedList.h  CPartManager.h  CPositionList.h  CShadowPartManager.cpp  CShadowPartManager.h  CSoundPartManager.cpp  CSoundPartManager.h  CSpritePal.cpp  CSpritePal.h  (+476 more)
mingw/DXLib/: BIT_RES.H  CDirectDraw.cpp  CDirectDrawSurface.cpp  CDirectDrawSurface.h  CDirectInput.h  CDirectMusic.cpp  CDirectSetup.h  CDirectSetupGetVersion.cpp  CDirectSound.cpp  CDirectSoundStream.cpp  CMakeLists.txt  DXLib.h  header.cpp  huffman.cpp  l3types.h  mp3.cpp  mp3.h  soundbuf.cpp  vorbisenc.h  vorbisfile.h
mingw/FrameLib/: CAnimationFrame.cpp  CAnimationFrame.h  CAnimationFrameSetManager.h  CCreatureFrameSetManager.h  CFrame.h  CFramePack.cpp  CFramePack.h  CFrameSetManager.h  CMakeLists.txt  FR.h  Frame_PCH.h  TArray.h
mingw/MZLib/: CMakeLists.txt  adler32.c  deflate.h  gzio.c
mingw/Packet/: Assert.h  ClientPlayer.h  Datagram.cpp  Datagram.h  DatagramPacket.h  Encrypter.h  Exception.h  ExtraSlotInfo.cpp  FileAPI.cpp  GameTime.cpp  GearSlotInfo.h  GuildWarInfo.h  InventoryInfo.cpp  InventorySlotInfo.cpp  NPCInfo.h  PCItemInfo.cpp  PCItemInfo.h  PCOustersInfo.cpp  Packet.h  (+24 more)
resurrected/: CMakeLists.txt
tests/: CMakeLists.txt  test_main.c  test_platform.cpp  test_sprite_rendering.cpp  test_spritelib_backend.cpp
(+4288 files in other folders)
